# heos-controller

./: .gitignore  README.md  aiohttp_server.py  com.github.heoscontroller.desktop.in  command_history.py  config.json  device_cache.py  heos-controller.desktop  heos-controller.in  heos_controller_gtk.py  heos_discover.py  heos_mdns.py  index.html  logger_config.py  main.js  mdns_browse.py  meson.build  package-lock.json  package.json  preload.js  requirements-gtk.txt  requirements.txt  restart.sh  ssdp_discover.py  tailwind.config.js  test_device_cache.py  test_devices.py  test_heos_connection.py  test_heos_login.sh  web_app.py  window.ui
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: heosApi.ts
static/css/: input.css  styles.css
static/js/: deviceDetails.js  renderer.js  theme.js
